--- a/milestone3/clients.html
+++ b/milestone3/clients.html
@@ -16,13 +16,12 @@
     <div class="col s12 m6 l3">
         <div class="card light-blue darken-4 center-align">
             <div class="card-content white-text">
-                <span class="card-title">{{ client.client_name }}  - <i class="fas fa-cog"></i></span>
-                <div>
+                <span class="card-title">{{ client.client_name }}  -</span>
                 <div class="card-action cog">
+                    <i class="fas fa-cog"></i>
                     <a href="{{ url_for('edit_client', client_id=client.id) }}" class="btn green accent-4">Edit</a>
                     <a href="{{ url_for('delete_client', client_id=client.id) }}" class="btn red">Delete</a>
                 </div>
-            </div>
             </div>
         </div>
     </div>
